force-app/main/default/objects/Service_Desk_Registration__c/Service_Desk_Registration__c.object-meta.xml
<CustomObject>
    <description>SFI-601 - The &#39;Service Desk Registration&#39; object registers all service desk registration of the various locations.</description>
    <label>Service Desk Registration</label>
    <nameField>
        <displayFormat>SR-{00000000}</displayFormat>
        <label>Service Desk Registration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Desk Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>