force-app/main/default/objects/Service_Desk_Registration__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFI-601 - A service desk registration is related to an account. This can be a new created account or an existing account.</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Desk Registrations</relationshipLabel>
    <relationshipName>Service_Desk_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>