force-app/main/default/objects/Service_Desk_Registration__c/fields/Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Birth_Date__c</fullName>
    <description>SFI-601 We search the related case and account based on postal code, housenumber and birth date</description>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>