force-app/main/default/objects/Service_Desk_Registration__c/fields/Called_To_Service_Desk_Date_And_Time__c.field-meta.xml
<CustomField>
    <fullName>Called_To_Service_Desk_Date_And_Time__c</fullName>
    <description>This field is needed to calculate the wait time for the visitor. The field will be filled if the status is updated to &#39;At The Service Desk&#39;.</description>
    <inlineHelpText>This is the time the visitor is called to the service desk.</inlineHelpText>
    <label>Called To Service Desk Date And Time</label>
    <type>DateTime</type>
</CustomField>