force-app/main/default/objects/Service_Desk_Registration__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFI-601 - A service desk registration is related to a case. This can be a new created case or an existing case.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Service Desk Registrations</relationshipLabel>
    <relationshipName>Service_Desk_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>