force-app/main/default/objects/Service_Desk_Registration__c/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <description>The contents of the message shown on the queue screen for this queued person</description>
    <formula>First_Name__c &amp;&quot;, Aangemeld om &quot;&amp;TEXT(HOUR(TIMEVALUE(CreatedDate)))&amp;&quot;:&quot;&amp;TEXT(MINUTE(TIMEVALUE(CreatedDate)))</formula>
    <label>Display Label</label>
    <type>Text</type>
</CustomField>