force-app/main/default/objects/Service_Desk_Registration__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>SFI-601 This field is filled with the email provided by the customer during the registration process.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>