force-app/main/default/objects/Service_Desk_Registration__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>SFI-601 This field is filled with the first name provided by the customer during the registration process.</description>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>