force-app/main/default/objects/Service_Desk_Registration__c/fields/Is_At_Desk__c.field-meta.xml
<CustomField>
    <fullName>Is_At_Desk__c</fullName>
    <description>True when the registered user is currently at the desk or should be called there</description>
    <formula>ISPICKVAL( Status__c , &quot;At The Counter&quot;)</formula>
    <label>Is At Desk</label>
    <type>Checkbox</type>
</CustomField>