force-app/main/default/objects/Service_Desk_Registration__c/fields/Is_In_Queue__c.field-meta.xml
<CustomField>
    <fullName>Is_In_Queue__c</fullName>
    <description>True when this registered user is waiting</description>
    <formula>ISPICKVAL(Status__c,&quot;Registered&quot;)</formula>
    <label>Is In Queue</label>
    <type>Checkbox</type>
</CustomField>