force-app/main/default/objects/Service_Desk_Registration__c/fields/Is_Relevant__c.field-meta.xml
<CustomField>
    <fullName>Is_Relevant__c</fullName>
    <description>Used by the logic to determine if the record is currently relevant when displaying the queue/at desk</description>
    <formula>AND(
NOT( ISPICKVAL(Status__c,&#39;Completed&#39;)),
DATEVALUE(CreatedDate) =  TODAY() 
)</formula>
    <label>Is Relevant</label>
    <type>Checkbox</type>
</CustomField>