force-app/main/default/objects/Service_Desk_Registration__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>SFI-601 We search the related case and account based on postal code, housenumber and birth date</description>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>