force-app/main/default/objects/Service_Desk_Registration__c/fields/Service_Desk_Location__c.field-meta.xml
<CustomField>
    <fullName>Service_Desk_Location__c</fullName>
    <description>SFI-600 Used to show the queue for a certain location</description>
    <label>Service Desk Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service_Desk_Head_Office</fullName>
                <label>Head Office</label>
            </value>
            <value>
                <fullName>Service_Desk_North_East</fullName>
                <label>North &amp; East</label>
            </value>
            <value>
                <fullName>Service_Desk_South</fullName>
                <label>South</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>