force-app/main/default/objects/Service_Desk_Registration__c/fields/Service_Desk_Physical_Location__c.field-meta.xml
<CustomField>
    <fullName>Service_Desk_Physical_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The physical location where this registration was done</description>
    <label>Service Desk Physical Location</label>
    <referenceTo>Service_Desk_Location__c</referenceTo>
    <relationshipLabel>Service Desk Registrations</relationshipLabel>
    <relationshipName>Service_Desk_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>