force-app/main/default/objects/Service_Desk_Registration__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>SFI-601 - The status field is used to calculate durations of waiting and at the counter. It&#39;s also used to calculate the queue for the Visitor Screen</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
                <default>true</default>
                <label>🙋‍♂️ Registered</label>
            </value>
            <value>
                <fullName>At The Service Desk</fullName>
                <label>👩‍💻 At The Service Desk</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <label>☑️ Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>