force-app/main/default/objects/Service_Desk_Registration__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>SFI-601 - Filled with the Case Type the user selects. It&#39;s a text field because the Type field on the Case can&#39;t be promoted as global value set. would cost double maintenance if this was a picklist.</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>