force-app/main/default/objects/Service_Desk_Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service_Desk_Location__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Is_Relevant__c</columns>
    <columns>Service_Desk_Physical_Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>