force-app/main/default/objects/Service_Desk_Registration__c/listViews/Service_Desk_Head_Office_Counter_Visit.listView-meta.xml
<ListView>
    <fullName>Service_Desk_Head_Office_Counter_Visit</fullName>
    <filterScope>Queue</filterScope>
    <label>Servicebalie Hoofdkantoor</label>
    <queue>Service_Desk_Head_Office</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>