force-app/main/default/objects/Service_Desk_Registration__c/listViews/Service_Desk_North_East_Service_Desk_Registration.listView-meta.xml
<ListView>
    <fullName>Service_Desk_North_East_Service_Desk_Registration</fullName>
    <filterScope>Queue</filterScope>
    <label>Servicebalie Noord &amp; Oost</label>
    <queue>Service_Desk_North_East</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>