force-app/main/default/objects/Service_Desk_Registration__c/listViews/Service_Desk_South_Service_Desk_Registration.listView-meta.xml
<ListView>
    <fullName>Service_Desk_South_Service_Desk_Registration</fullName>
    <filterScope>Queue</filterScope>
    <label>Servicebalie Zuid</label>
    <queue>Service_Desk_South</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>